validation error resolved for dsar form,alignment issue resolved for email template

--- a/src/app/privacy/dsar/dsar-requestdetails/dsar-requestdetails.component.scss
+++ b/src/app/privacy/dsar/dsar-requestdetails/dsar-requestdetails.component.scss
@@ -945,9 +945,9 @@ ul.ngx-pagination {
 
  .template-dp-position {
     position: absolute;
-    right: 5px;
+    right: 13px;
     z-index: 1;
-    top: 4px;
+    top: 60px;
  }
 
  .label-bold {
